--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cavemans-server",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "keywords": [],
   "bugs": "https://github.com/hankadler/js-cavemans-server/issues",
@@ -37,10 +37,11 @@
     "node": ">=12"
   },
   "dependencies": {
-    "apollo-server": "^3.10.2",
     "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.10.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
